--- a/client/package.json
+++ b/client/package.json
@@ -29,8 +29,10 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.2",
     "axios": "^0.26.1",
+    "bootstrap": "^5.2.1",
     "postcss": "^8.4.8",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
