--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-select": "^5.4.0",
     "swr": "^1.2.2",
     "tailwindcss": "^3.0.23",
     "web-vitals": "^2.1.4"
