--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "autoprefixer": "^10.4.2",
     "axios": "^0.26.1",
     "bootstrap": "^5.2.1",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.8",
     "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
